# prem4derg

./: .gitignore  pyproject.toml
.github/workflows/: main.yml  publish.yml  test.yml  zizmor.yml
earth_model/: earth_model.py
notebooks/: PREM_density_example.ipynb  PREM_travel_times_example.ipynb  PREM_velocity_example.ipynb
src/premlike/: earth_model.py
tests/: test_peice_poly.py  test_tabulate.py
