[project]
name = "prem4derg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "obspy",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
